Style : FoodDetail 디자인 변경

--- a/app/src/main/res/layout/fragment_custom_add.xml
+++ b/app/src/main/res/layout/fragment_custom_add.xml
@@ -132,17 +132,19 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/nameLayout"
+                    style="@style/Widget.MyApp.TextInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@android:color/transparent"
                     android:hint="이름"
-                    style="@style/Widget.MyApp.TextInputLayout"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
+                    app:layout_constraintBottom_toTopOf="@+id/servingSizeLaytout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
@@ -162,13 +164,15 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@android:color/transparent"
                     android:hint="기본 제공량(g)"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
+                    app:layout_constraintBottom_toTopOf="@+id/calroiesLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/nameLayout"
@@ -188,13 +192,15 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@android:color/transparent"
                     android:hint="열량(g)"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
+                    app:layout_constraintBottom_toTopOf="@+id/carbLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/servingSizeLaytout"
@@ -214,13 +220,15 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@android:color/transparent"
                     android:hint="탄수화물(g)"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
+                    app:layout_constraintBottom_toTopOf="@+id/proteinLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/calroiesLayout"
@@ -240,13 +248,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@android:color/transparent"
                     android:hint="단백질(g)"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
+                    app:layout_constraintBottom_toTopOf="@+id/fatLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/carbLayout"
@@ -266,13 +276,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="250dp"
                     android:background="@android:color/transparent"
                     android:hint="지방(g)"
                     app:boxStrokeColor="@color/text_blue"
                     app:endIconTint="@color/text_blue"
                     app:hintTextColor="@color/text_blue"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/proteinLayout"
@@ -286,11 +298,13 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
                 <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                     android:id="@+id/addBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="100dp"
                     android:layout_marginBottom="20dp"
                     android:elevation="6dp"
                     android:gravity="center"
@@ -298,12 +312,7 @@
                     android:textColor="@color/text_black"
                     android:translationZ="12dp"
                     app:backgroundTint="@color/light_green"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/fatLayout" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.core.widget.NestedScrollView>
+                    app:layout_anchor="@id/nestedScrollView"
+                    app:layout_anchorGravity="bottom|center"/>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
