--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -167,6 +167,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
+                android:paddingStart="20dp"
                 android:text="음식 추가하기"
                 android:textColor="@color/black"
                 app:backgroundTint="@color/light_green"
