--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -127,7 +127,7 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="30dp"
-                        android:background="@color/black"
+                        android:background="@color/section_gray"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -139,7 +139,7 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="30dp"
-                        android:background="@color/black"
+                        android:background="@color/section_gray"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
@@ -188,6 +188,7 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="20dp"
                         android:text="단백질"
+                        android:textColor="@color/text_black"
                         app:layout_constraintEnd_toStartOf="@+id/protein"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView19" />
@@ -240,6 +241,7 @@
                         android:layout_marginEnd="30dp"
                         android:gravity="end"
                         android:text="@{viewModel.calculatedProtein}"
+                        android:textColor="@color/text_black"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/textView20"
                         app:layout_constraintTop_toBottomOf="@+id/textView19" />
@@ -253,6 +255,7 @@
                         android:layout_marginBottom="20dp"
                         android:gravity="end"
                         android:text="@{viewModel.calculatedFat}"
+                        android:textColor="@color/text_black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/textView21"
