--- a/app/src/main/res/layout/fragment_meal_detail.xml
+++ b/app/src/main/res/layout/fragment_meal_detail.xml
@@ -201,6 +201,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:layout_marginBottom="20dp"
+            android:paddingStart="20dp"
             android:text="음식 추가하기"
             android:textColor="@color/black"
             app:backgroundTint="@color/light_green"
